Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-26544

Assertion `part_share->auto_inc_initialized' failed in ha_partition::get_auto_increment on INSERT

    XMLWordPrintable

Details

    Description

      INSTALL PLUGIN spider SONAME 'ha_spider.so';
      SET SQL_MODE='';
      CREATE TABLE t (c INT AUTO_INCREMENT, KEY(c)) ENGINE=SPIDER PARTITION BY LIST COLUMNS (c) (PARTITION p DEFAULT ENGINE=SPIDER);
      INSERT INTO t (c) VALUES (0);
      INSERT INTO t (c) VALUES (0);
      

      Leads to:

      10.7.0 1bc82aaf0a7746c0921a94034aff2d51f0d75cd0 (Debug)

      mysqld: /test/10.7_dbg/sql/ha_partition.cc:10802: virtual void ha_partition::get_auto_increment(ulonglong, ulonglong, ulonglong, ulonglong*, ulonglong*): Assertion `part_share->auto_inc_initialized' failed.
      

      10.7.0 1bc82aaf0a7746c0921a94034aff2d51f0d75cd0 (Debug)

      Core was generated by `/test/MD040921-mariadb-10.7.0-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      [Current thread is 1 (Thread 0x1513d8164700 (LWP 1873546))]
      (gdb) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x00001513d93c7859 in __GI_abort () at abort.c:79
      #2  0x00001513d93c7729 in __assert_fail_base (fmt=0x1513d955d588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x556055939fb0 "part_share->auto_inc_initialized", file=0x556055938b80 "/test/10.7_dbg/sql/ha_partition.cc", line=10802, function=<optimized out>) at assert.c:92
      #3  0x00001513d93d8f36 in __GI___assert_fail (assertion=assertion@entry=0x556055939fb0 "part_share->auto_inc_initialized", file=file@entry=0x556055938b80 "/test/10.7_dbg/sql/ha_partition.cc", line=line@entry=10802, function=function@entry=0x556055939f10 "virtual void ha_partition::get_auto_increment(ulonglong, ulonglong, ulonglong, ulonglong*, ulonglong*)") at assert.c:101
      #4  0x0000556055062661 in ha_partition::get_auto_increment (this=0x151394055730, offset=1, increment=1, nb_desired_values=1, first_value=0x1513d8162950, nb_reserved_values=0x1513d8162958) at /test/10.7_dbg/sql/ha_partition.cc:10802
      #5  0x0000556054da5227 in handler::update_auto_increment (this=this@entry=0x151394055730) at /test/10.7_dbg/sql/handler.cc:3954
      #6  0x00005560550753de in ha_partition::write_row (this=0x151394055730, buf=0x151394030758 "\377") at /test/10.7_dbg/sql/ha_partition.cc:4432
      #7  0x0000556054dad0b5 in handler::ha_write_row (this=0x151394055730, buf=0x151394030758 "\377") at /test/10.7_dbg/sql/handler.cc:7514
      #8  0x0000556054a5133a in write_record (thd=thd@entry=0x151394000db8, table=table@entry=0x1513940326f8, info=info@entry=0x1513d8162cc0, sink=sink@entry=0x0) at /test/10.7_dbg/sql/sql_insert.cc:2135
      #9  0x0000556054a5cf6c in mysql_insert (thd=thd@entry=0x151394000db8, table_list=0x151394013d60, fields=@0x151394005fc8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x151394014568, last = 0x151394014568, elements = 1}, <No data fields>}, values_list=@0x151394006010: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x151394014a98, last = 0x151394014a98, elements = 1}, <No data fields>}, update_fields=@0x151394005ff8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x556056075c60 <end_of_list>, last = 0x151394005ff8, elements = 0}, <No data fields>}, update_values=@0x151394005fe0: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x556056075c60 <end_of_list>, last = 0x151394005fe0, elements = 0}, <No data fields>}, duplic=DUP_ERROR, ignore=false, result=0x0) at /test/10.7_dbg/sql/sql_insert.cc:1123
      #10 0x0000556054aa309c in mysql_execute_command (thd=thd@entry=0x151394000db8, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/10.7_dbg/sql/sql_parse.cc:4565
      #11 0x0000556054a8dccb in mysql_parse (thd=thd@entry=0x151394000db8, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x1513d8163400) at /test/10.7_dbg/sql/sql_parse.cc:8036
      #12 0x0000556054a9c8d0 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x151394000db8, packet=packet@entry=0x15139400b739 "INSERT INTO t (c) VALUES (0)", packet_length=packet_length@entry=28, blocking=blocking@entry=true) at /test/10.7_dbg/sql/sql_class.h:1358
      #13 0x0000556054a9fcd6 in do_command (thd=0x151394000db8, blocking=blocking@entry=true) at /test/10.7_dbg/sql/sql_parse.cc:1404
      #14 0x0000556054c160c8 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x556057caa078, put_in_cache=put_in_cache@entry=true) at /test/10.7_dbg/sql/sql_connect.cc:1418
      #15 0x0000556054c166cd in handle_one_connection (arg=arg@entry=0x556057caa078) at /test/10.7_dbg/sql/sql_connect.cc:1312
      #16 0x000055605507fade in pfs_spawn_thread (arg=0x556057ba92b8) at /test/10.7_dbg/storage/perfschema/pfs.cc:2201
      #17 0x00001513d98d6609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #18 0x00001513d94c4293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.4.22 (dbg), 10.5.13 (dbg), 10.6.5 (dbg), 10.7.0 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.2.41 (dbg), 10.2.41 (opt), 10.3.32 (dbg), 10.3.32 (opt), 10.4.22 (opt), 10.5.13 (opt), 10.6.5 (opt), 10.7.0 (opt)
      MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.51 (dbg), 5.6.51 (opt), 5.7.35 (dbg), 5.7.35 (opt), 8.0.26 (dbg), 8.0.26 (opt)

      Attachments

        Activity

          People

            nayuta-yanagisawa Nayuta Yanagisawa (Inactive)
            Roel Roel Van de Paar
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 4d 1h 35m
                4d 1h 35m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.